# my-tools

./: .gitignore  README.md  README_CN.md
.claude/: settings.local.json
.github/workflows/: pylint.yml
js-excel-generator/: README.md  pyproject.toml
js-excel-generator/src/: converter.js  generator.py  main.py  random_data.py
js-image-cropper/: README.md
js-image-cropper/src/: converter.js  index.js
python-excel-generator/: requirements.txt
python-excel-generator/src/: generator.py
python-image-cropper/: README.md  package.json
